--- a/contact.html
+++ b/contact.html
@@ -18,69 +18,72 @@
 </head>
 
 <body>
-    <div class="col-12 " style="background: var(--second-color);" id="alert-message">
-        <div class="container">
-            <div class="col-12 p-0 row p-3">
-                <div class="col px-2" style="color:#fff">
-                    رسالة تنبيهية للزائر يتم إخفائها تلقائياً اذا عمل سكرول للأسفل أو ضغط على زر إغلاق
-                </div>
-                <div class="col-1 d-flex justify-content-end px-1 align-items-center">
-                    <span class="fas fa-times p-1" style="color:#fff;cursor: pointer;" onclick="$('#alert-message').slideUp();"></span>
+    <div class="col-12 fixed-top">
+        <div class="col-12 " style="background: var(--second-color);" id="alert-message">
+            <div class="container">
+                <div class="col-12 p-0 row p-3">
+                    <div class="col px-2" style="color:#fff">
+                        رسالة تنبيهية للزائر يتم إخفائها تلقائياً اذا عمل سكرول للأسفل أو ضغط على زر إغلاق
+                    </div>
+                    <div class="col-1 d-flex justify-content-end px-1 align-items-center">
+                        <span class="fas fa-times p-1" style="color:#fff;cursor: pointer;" onclick="$('#alert-message').slideUp();"></span>
+                    </div>
                 </div>
             </div>
         </div>
+        <nav class="navbar navbar-expand-lg navbar-dark  py-3" style="background: var(--main-color);">
+            <div class="container" style="direction: ltr;">
+                <a class="navbar-brand p-0" href="#" style="color:var(--second-color);">
+                    <img src="images/logo.jpeg" style="width: 160px;">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse  navbar-collapse py-4 py-md-0" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-md-auto mb-2 mb-lg-0 px-0" style="direction:rtl">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">الرئيسية</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                من نحن
+                            </a>
+                            <ul class="dropdown-menu py-0" aria-labelledby="navbarDropdown" style="direction:rtl;background: var(--second-color);right: 0px;">
+                                <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="about.html" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> بدايتنا</a></li>
+                                <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> رؤيتنا ورسالتنا</a></li>
+                                <li class="text-end py-1 dropdown-hover">
+                                    <a class="dropdown-item" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> قصة حياتنا</a>
+                                    <ul class="dropdown-menu py-0" aria-labelledby="navbarDropdown" style="direction:rtl;background: var(--second-color);">
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                        <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">خدماتنا</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="contact.html">اتصل بنا</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="branches.html">فروعنا</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="gallery.html">الاعلام</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="jobs.html">الوظائف</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
-        <nav class="navbar navbar-expand-lg navbar-dark py-3" style="background: var(--main-color);">
-        <div class="container" style="direction: ltr;">
-            <a class="navbar-brand p-0" href="#" style="color:var(--second-color);">
-                <img src="images/logo.jpeg" style="width: 160px;">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse  navbar-collapse py-4 py-md-0" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-md-auto mb-2 mb-lg-0 px-0" style="direction:rtl">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">الرئيسية</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            من نحن
-                        </a>
-                        <ul class="dropdown-menu py-0" aria-labelledby="navbarDropdown" style="direction:rtl;background: var(--second-color);right: 0px;">
-                            <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="about.html" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> بدايتنا</a></li>
-                            <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> رؤيتنا ورسالتنا</a></li>
-                            <li class="text-end py-1 dropdown-hover">
-                                <a class="dropdown-item" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> قصة حياتنا</a>
-                                <ul class="dropdown-menu py-0" aria-labelledby="navbarDropdown" style="direction:rtl;background: var(--second-color);">
-                                    <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
-                                    <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
-                                    <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
-                                    <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
-                                    <li class="text-end border-bottom py-1" style="border-color:var(--main-color)!important;"><a class="dropdown-item" href="#" style="color:var(--main-color);background: var(--second-color);"> <span class="fas fa-circle font-small"></span> نص عشوائي</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">خدماتنا</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="contact.html">اتصل بنا</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="branches.html">فروعنا</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="gallery.html">الاعلام</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="jobs.html">الوظائف</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div class="col-12 p-0" style="margin-top:87px"></div>
     <div class="col-12 px-0">
         <img src="images/sliders/slider_3.jpg" style="width:100%;max-height:800px;">
     </div>
@@ -126,15 +129,18 @@
     </div>
     <div class="col-12 p-0" id="footer" style="background:var(--main-color);">
         <div class="container py-5">
-            <div class="col-12 row px-lg-4" style="border-radius: 45px 0px 45px 0px;background: var(--second-color);min-height: 350px;">
-                <div class="col-12 col-lg-3 px-2 py-5">
+            <div class="col-12 row px-lg-4 py-4" style="border-radius: 45px 0px 45px 0px;background: var(--second-color);min-height: 350px;">
+                <div class="col-12 col-lg-3 px-2 py-lg-4 py-1 mb-3">
                     <div class="col-12 p-0 text-end ">
-                        <img src="images/logos/logo_2.png" style="width: 160px;" class="mb-4">
+                        <div class="col-12 px-0 text-center text-md-end">
+                            <img src="images/logos/logo_2.png" style="width: 160px;" class="mb-4 d-inline-block">
+                        </div>
+                        
                         <!-- <h2 style="color:#fff" class="mb-3">الشعار هنا</h2> -->
-                        <div class="col-12 p-0 text-end">
+                        <div class="col-12 py-0 px-2 px-lg-0 text-justify ">
                             <p style="color:var(--main-color);opacity: .8;">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.</p>
                         </div>
-                        <div class="col-12 py-2 px-0" style="direction:ltr">
+                        <div class="col-12 py-0 px-2 px-lg-0  text-end" style="direction:ltr">
                             <a href="#" style="border:1px solid var(--main-color);background:transparent;padding: 2px;" class="rounded-circle d-inline-block mx-1 text-center">
                                 <span class="fab fa-twitter font-3 p-1 rounded-circle" style="background:var(--main-color);color: var(--second-color);width: 29px;"></span>
                             </a>
@@ -150,22 +156,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 px-2 py-5">
-                    <ul style="list-style-type: none;">
+                <div class="col-12 col-lg-3 px-2 py-lg-4 py-1">
+                    <ul style="list-style-type: none;" class="px-2">
                         <li class="pb-4"><a href="#" class="pb-1" style="color:var(--main-color);border-bottom: 3px solid var(--main-color)!important;">الرئيسية</a></li>
                         <li class="pb-4"><a href="#" class="pb-1" style="color:var(--main-color);border-bottom: 3px solid var(--main-color)!important;">من نحن</a></li>
                         <li class="pb-4"><a href="#" class="pb-1" style="color:var(--main-color);border-bottom: 3px solid var(--main-color)!important;">رؤيتنا ورسالتنا</a></li>
                         <li class="pb-4"><a href="#" class="pb-1" style="color:var(--main-color);border-bottom: 3px solid var(--main-color)!important;">خدماتنا</a></li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3 px-2 py-5">
-                    <ul style="list-style-type: none;">
+                <div class="col-12 col-lg-3 px-2 py-lg-4 py-1">
+                    <ul style="list-style-type: none;" class="px-2">
                         <li class="pb-4"><a href="#" class="pb-1" style="color:var(--main-color);border-bottom: 3px solid var(--main-color)!important;">فروعنا</a></li>
                         <li class="pb-4"><a href="#" class="pb-1" style="color:var(--main-color);border-bottom: 3px solid var(--main-color)!important;">معرض الصور</a></li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3 px-2 py-5">
-                    <ul style="list-style-type: none;">
+                <div class="col-12 col-lg-3 px-2 py-lg-4 py-1">
+                    <ul style="list-style-type: none;" class="px-2">
                         <li class="pb-4"><a href="#" class="pb-1" style="color:var(--main-color);border-bottom: 3px solid var(--main-color)!important;">الإعلام</a></li>
                         <li class="pb-4"><a href="#" class="pb-1" style="color:var(--main-color);border-bottom: 3px solid var(--main-color)!important;">الوظائف</a></li>
                         <li class="pb-4"><a href="#" class="pb-1" style="color:var(--main-color);border-bottom: 3px solid var(--main-color)!important;">إتصل بنا</a></li>
