--- a/gallery.html
+++ b/gallery.html
@@ -18,19 +18,19 @@
 </head>
 
 <body>
-    <div class="col-12 fixed-top">
-        <div class="col-12 " style="background: var(--second-color);" id="alert-message">
-            <div class="container">
-                <div class="col-12 p-0 row p-3">
-                    <div class="col px-2" style="color:#fff">
-                        رسالة تنبيهية للزائر يتم إخفائها تلقائياً اذا عمل سكرول للأسفل أو ضغط على زر إغلاق
-                    </div>
-                    <div class="col-1 d-flex justify-content-end px-1 align-items-center">
-                        <span class="fas fa-times p-1" style="color:#fff;cursor: pointer;" onclick="$('#alert-message').slideUp();"></span>
-                    </div>
+    <div class="col-12 active" style="background: var(--second-color);" id="alert-message">
+        <div class="container">
+            <div class="col-12 p-0 row p-3">
+                <div class="col px-2" style="color:#fff">
+                    رسالة تنبيهية للزائر يتم إخفائها تلقائياً اذا عمل سكرول للأسفل أو ضغط على زر إغلاق
+                </div>
+                <div class="col-1 d-flex justify-content-end px-1 align-items-center">
+                    <span class="fas fa-times p-1" style="color:#fff;cursor: pointer;" onclick="$('#alert-message').slideUp();$('#alert-message').addClass('removed');$('#alert-message').removeClass('active');"></span>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="col-12" id="main-fixed-top" >
         <nav class="navbar navbar-expand-lg navbar-dark  py-3" style="background: var(--main-color);">
             <div class="container" style="direction: ltr;">
                 <a class="navbar-brand p-0" href="#" style="color:var(--second-color);">
@@ -83,7 +83,7 @@
             </div>
         </nav>
     </div>
-    <div class="col-12 p-0" style="margin-top:87px"></div>
+    <div class="col-12 p-0"  id="fixing-margin-top"></div>
     <div class="col-12 px-0">
         <img src="images/sliders/slider_2.jpg" style="width:100%;max-height:800px;">
     </div>
