--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">الرئيسية</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown" id="main-dropdown">
                             <a class="nav-link " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 من نحن
                             </a>
