--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 </head>
 
 <body>
+    <div style="width:100%;position: fixed;height: 100vh;z-index: 123456789;background: #fff;height: 100vh;" id="pre-loader">
+        <div class="p-0 d-flex align-items-center justify-content-center" style="height:100vh" >
+            <img src="images/loading.gif" style="width:600px;max-width:100%;" class="d-inline-block">
+        </div>
+    </div>
+    
     <div class="col-12 active" style="background: var(--second-color);" id="alert-message">
         <div class="container">
             <div class="col-12 p-0 row p-3">
